--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "(localdb)\\MSSQLLocalDB;Database=GameForumDB;Trust Server Certificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
