--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "(localdb)\\MSSQLLocalDB;Database=GameForumDB;Trust Server Certificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=GameForumDB;Trust Server Certificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
