--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=GameForumDB;Trust Server Certificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-66DMPOH;Database=GameForumDBFinal;Trust Server Certificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
 
   }
 }
